@startuml

entity "BankEntity" as BankEntity {
  *id : Long
  --
  nombre : String
  codigoSwift : String
  pais : String
  fechaCreacion : String
  estado : String
}

entity "BankAccount" as BankAccount {
  *id : Long
  --
  numeroCuenta : String
  tipoCuenta : String
  saldo : Double
  moneda : String
  estado : String
}

entity "Transaction" as Transaction {
  *id : Long
  --
  monto : Double
  tipo : String
  fechaTransaccion : LocalDateTime
  estado : String
}

entity "BankEmployee" as BankEmployee {
  *id : Long
  --
  nombre : String
  rol : String
  fechaIngreso : String
}

entity "Customer" as Customer {
  *id : Long
  --
  nombreCompleto : String
  identificacion : String
  direccion : String
  telefono : String
  correo : String
}

' Relaciones
BankEntity ||--o{ BankAccount : "has"
BankEntity ||--o{ BankEmployee : "employs"
Customer ||--o{ BankAccount : "owns"
BankAccount ||--o{ Transaction : "origin"
BankAccount ||--o{ Transaction : "destination"

@enduml
